--- a/deals.html
+++ b/deals.html
@@ -111,7 +111,7 @@
       <img src="images/24.webp" alt="24" />
       <h3>Wireless Earbuds</h3>
       <p>Wireless Earbuds, Bluetooth Headphones 5.4 HiFi Stereo, in Ear Earphones with 4 ENC Noise Cancelling Mics, 40H Playtime Ear Buds with Mini Case, IP7 Waterproof Headset with LED Display, USB C Charging phones</p>
-      <p><strong style="text-decoration: line-through;"></strong>P400<span style="color:green;">P340 Student Discount</span></p>
+      <p><strong style="text-decoration: line-through;">P400</strong><span style="color:green;">P340 Student Discount</span></p>
       <a href="deals.html" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-26">
