--- a/deals.html
+++ b/deals.html
@@ -97,7 +97,7 @@
       <img src="images/19.webp" alt="19" />
       <h3>SanDisk 1TB Extreme PRO Portable SSD</h3>
       <p>SanDisk 1TB Extreme PRO Portable SSD - Up to 2000MB/s - USB-C, USB 3.2 Gen 2x2, IP65 Water and Dust Resistance, Updated Firmware - External Solid State Drive - SDSSDE81-4T00-G25</p>
-      <p><strong style="text-decoration: line-through;"></strong>P1200<span style="color:green;">P900 Student Discount</span></p>
+      <p><strong style="text-decoration: line-through;">P1200</strong><span style="color:green;">P900 Student Discount</span></p>
       <a href="deals.html" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-20">
