--- a/search.html
+++ b/search.html
@@ -20,6 +20,10 @@
         </form>
     </main>
     <nav class="side-nav">
+        <a href="search.html">
+            <i class="fas fa-search"></i>
+            <span class="nav-label"></span>
+        </a>
     <a href="index.html">
       <i class="fas fa-home"></i>
       <span class="nav-label">Home</span>
