--- a/deals.html
+++ b/deals.html
@@ -58,7 +58,7 @@
       <p><strong style="text-decoration: line-through;">P15600</strong> <span style="color:green;">P13500 Student Discount</span></p>
       <a href="deals.html" class="btn">View Details</a>
     </div>
-    </div class="product-info" id="product-7">
+    <div class="product-info" id="product-7">
       <img src="images/7.webp" alt="7" />
       <h3>HP Pavilion 15.6" HD Touchscreen Anti-Glare Laptop</h3>
       <p>HP Pavilion 15.6" HD Touchscreen Anti-Glare Laptop, 16GB RAM, 1TB SSD Storage, Intel Core Processor up to 4.1GHz, Up to 11 Hours Long Battery Life, Type-C, HDMI, Windows 11 Home, Silver</p>
