--- a/deals.html
+++ b/deals.html
@@ -49,91 +49,91 @@
     <h2>Lenovo IdeaPad Slim 3X - 2025</h2>
     <p>Lenovo IdeaPad Slim 3X - 2025 - Everyday AI Laptop - Copilot+ PC - 15.3" WUXGA Display - 16 GB Memory - 512 GB Storage - Qualcomm® Snapdragon® X - Luna Grey</p>
     <p><strong style="text-decoration: line-through;">P7899</strong><span style="color:green;">P6900 Student Discount</span></p>
-    <button class="btn">View Details</button>
+    <a href="product.html?id=1" class="btn">View Details</a>
   </div>
   <div class="product-info" id="product-10">
       <img src="images/10.webp" alt="10" />
       <h3>Dell Inspiron 3520 15.6"</h3>
       <p>Dell Inspiron 3520 15.6" FHD Laptop, Intel Core i7-1255U Processor, 32GB RAM, 1TB SSD, Webcam, HDMI, SD-Card Slot, Wi-Fi 6, Windows 11 Home, Black</p>
       <p><strong style="text-decoration: line-through;">P15600</strong> <span style="color:green;">P13500 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=10" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-7">
       <img src="images/7.webp" alt="7" />
       <h3>HP Pavilion 15.6" HD Touchscreen Anti-Glare Laptop</h3>
       <p>HP Pavilion 15.6" HD Touchscreen Anti-Glare Laptop, 16GB RAM, 1TB SSD Storage, Intel Core Processor up to 4.1GHz, Up to 11 Hours Long Battery Life, Type-C, HDMI, Windows 11 Home, Silver</p>
       <p><strong style="text-decoration: line-through;">P9200</strong> <span style="color:green;">P8200 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=7" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-11">
       <img src="images/11.jpg" alt="11" />
       <h3>Dell Inspiron 3535 Laptop - 15.6-inch</h3>
       <p>Dell Inspiron 3535 Laptop - 15.6-inch FHD (1920 x 1080) Display, AMD Ryzen 5 7520U Processor, 8GB DDR4 RAM, 512GB SSD, AMD Radeon Graphics, Windows 11 Home, 6-Months Migrate - Carbon Black</p>
       <p><strong style="text-decoration: line-through;">P10500</strong><span style="color:green;">P9000 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=11" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-13">
       <img src="images/13.webp" alt="13" />
       <h3>Acer Swift Go 14 AI Copilot+ PC | 14.5"</h3>
       <p>Acer Swift Go 14 AI Copilot+ PC | 14.5" 2.5K 120Hz Display | Unlock AI Experiences | Snapdragon X Plus 8-Core Processor | 16GB RAM | 1TB Gen 4 SSD | Wi-Fi 7 | Windows 11 Home | SFG14-01-X006</p>
       <p><strong style="text-decoration: line-through;">P12999</strong> <span style="color:green;">P10999 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=13" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-15">
       <img src="images/15.webp" alt="15" />
       <h3>Acer Swift Go 14 Intel Evo Edition Laptop</h3>
       <p>Acer Swift Go 14 Intel Evo Edition Laptop | 14" OLED WQXGA+ 2880x1800 Display | Unlock AI Experiences | Intel Core Ultra 5 processor 125H | Intel ARC | 8GB LPDDR5 | 512GB SSD | WiFi 6E | SFG14-73-58EP</p>
       <p><strong style="text-decoration: line-through;">P11699</strong> <span style="color:green;">P10499 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=15" class="btn">View Details</a>
     </div>
-    <div class="product-info" id="product-17">
+    <div class="product-info" id="product-18">
       <img src="images/18.webp" alt="18" />
       <h3>KVIDIO Bluetooth Headphones Over Ear</h3>
       <p>KVIDIO Bluetooth Headphones Over Ear, 65 Hours Playtime Wireless Headphones with Microphone, Foldable Lightweight Headset with Deep Bass, HiFi Stereo Sound for Travel Work Cellphone</p>
       <p><strong style="text-decoration: line-through;">P699</strong> <span style="color:green;">P599 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=18" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-19">
       <img src="images/19.webp" alt="19" />
       <h3>SanDisk 1TB Extreme PRO Portable SSD</h3>
       <p>SanDisk 1TB Extreme PRO Portable SSD - Up to 2000MB/s - USB-C, USB 3.2 Gen 2x2, IP65 Water and Dust Resistance, Updated Firmware - External Solid State Drive - SDSSDE81-4T00-G25</p>
       <p><strong style="text-decoration: line-through;">P1200</strong><span style="color:green;">P900 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=19" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-20">
       <img src="images/20.webp" alt="20" />
       <h3>USB-C Type C to USB-C Type Charge</h3>
       <p>USB-C Type C to USB-C Type Charge & Data Cable Cord Wire for New Beats Flex, Samsung, LG, Pixel, iPhone 15 & Other New Rechargeable Headsets, Earphones, Earbuds Portable SSD & Android Phones/Tablets</p>
       <p><strong style="text-decoration: line-through;">P190</strong> <span style="color:green;">P150 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=20" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-24">
       <img src="images/24.webp" alt="24" />
       <h3>Wireless Earbuds</h3>
       <p>Wireless Earbuds, Bluetooth Headphones 5.4 HiFi Stereo, in Ear Earphones with 4 ENC Noise Cancelling Mics, 40H Playtime Ear Buds with Mini Case, IP7 Waterproof Headset with LED Display, USB C Charging phones</p>
       <p><strong style="text-decoration: line-through;">P400</strong><span style="color:green;">P340 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=24" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-26">
       <img src="images/26.webp" alt="26" />
       <h3>Apple iPhone 12 Pro Max</h3>
       <p>Apple iPhone 12 Pro Max (256GB, Pacific Blue)</p>
       <p><strong style="text-decoration: line-through;">P8600</strong> <span style="color:green;">P7600 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=26" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-29">
       <img src="images/29.webp" alt="29" />
       <h3>Xiaomi 14T Ai 5G</h3>
       <p>Xiaomi 14T Ai 5G (512/12GB) Global ROM Unlocked Worldwide (for Tmobile Mint Tello Global) 50MP Triple Pro Leica Camera 6.67" 144Mhz (Titan Black)</p>
       <p><strong style="text-decoration: line-through;">P2459</strong> <span style="color:green;">P1950 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=29" class="btn">View Details</a>
     </div>
     <div class="product-info" id="product-30">
       <img src="images/30.webp" alt="30" />
       <h3>Samsung Galaxy A16 4G LTE</h3>
       <p>Samsung Galaxy A16 4G LTE (128GB + 4GB) International Model SM-A165F/DS Factory Unlocked, 6.7", Dual SIM, 50MP Triple Camera (Case Bundle), Black</p>
       <p><strong style="text-decoration: line-through;">P2599</strong> <span style="color:green;">P2100 Student Discount</span></p>
-      <a href="deals.html" class="btn">View Details</a>
+      <a href="product.html?id=30" class="btn">View Details</a>
     </div>
 </main>
 <footer>
