--- a/deals.html
+++ b/deals.html
@@ -24,6 +24,11 @@
       <i class="fas fa-store"></i>
       <span class="nav-label">Shop</span>
     </a>
+    <div class="nav-sub-links">
+    <a href="products.html">
+      <i class="fas fa-cube"></i>
+      <span class="nav-label">Products</span>
+    </a>
     <a class="active" href="deals.html">
       <i class="fas fa-tag"></i>
       <span class="nav-label">Deals</span>
