--- a/deals.html
+++ b/deals.html
@@ -33,6 +33,7 @@
       <i class="fas fa-tag"></i>
       <span class="nav-label">Deals</span>
     </a>
+    </div>
     <a href="about.html">
       <i class="fas fa-user"></i>
       <span class="nav-label">About Us</span>
