--- a/feedback.html
+++ b/feedback.html
@@ -169,6 +169,10 @@ button[type="submit"] {
             <i class="fas fa-pen"></i>
             <span class="nav-label">Feedback Form</span>
             </a>
+        <a href="cart.html">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="nav-label">Cart </span>
+    </a>
     </nav>
     <main class="main">
     <h2>Feedback Form</h2>
