--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
       <i class="fas fa-pen"></i>
       <span class="nav-label">Feedback Form</span>
     </a>
+    <a href="cart.html">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="nav-label">Cart </span>
+    </a>
   </nav>
 </header>
 <main class="container">
