--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,10 @@
       <i class="fas fa-pen"></i>
       <span class="nav-label">Feedback Form</span>
     </a>
+      <a href="cart.html">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="nav-label">Cart </span>
+    </a>
   </nav>
 </header>
 <main class="contact-section">
