--- a/search.html
+++ b/search.html
@@ -44,6 +44,10 @@
       <i class="fas fa-pen"></i>
       <span class="nav-label">Feedback Form</span>
     </a>
+        <a href="cart.html">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="nav-label">Cart </span>
+    </a>
   </nav>
     <footer>
         <p>&copy; 2025 CampusCart. All rights reserved.</p>
