--- a/product.html
+++ b/product.html
@@ -8,7 +8,50 @@
   <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-  <header><h1>CampusCart</h1></header>
+  <header>
+    <h1>CampusCart</h1>
+    </div>
+  <nav class="side-nav">
+    <a href="search.html">
+      <i class="fas fa-search"></i>
+      <span class="nav-label"></span>
+    </a>
+    <a href="index.html">
+      <i class="fas fa-home"></i>
+      <span class="nav-label">Home</span>
+    </a>
+    <a class="active" href="shop.html">
+      <i class="fas fa-store"></i>
+      <span class="nav-label">Shop</span>
+    </a>
+    <div class="nav-sub-links">
+    <a href="products.html">
+      <i class="fas fa-cube"></i>
+      <span class="nav-label">Products</span>
+    </a>
+    <a href="deals.html">
+      <i class="fas fa-tag"></i>
+      <span class="nav-label">Deals</span>
+    </a>
+  </div>
+    <a href="about.html">
+      <i class="fas fa-user"></i>
+      <span class="nav-label">About Us</span>
+    </a>
+    <a href="contact.html">
+      <i class="fas fa-envelope"></i>
+      <span class="nav-label">Contact</span>
+    </a>
+    <a href="feedback.html">
+      <i class="fas fa-pen"></i>
+      <span class="nav-label">Feedback Form</span>
+    </a>
+    <a href="cart.html">
+      <i class="fas fa-shopping-cart"></i>
+      <span class="nav-label">Cart </span>
+    </a>
+  </nav>
+  </header>
   <main id="product-detail" style="padding: 2rem;">
     <div id="product-container"></div>
   </main>
