--- a/product.html
+++ b/product.html
@@ -174,40 +174,7 @@
     return urlParams.get(param);
   }
 
-  // Function to display product details
-  function displayProduct(product) {
-    if (!product) {
-      document.getElementById('product-container').innerHTML = "<p>Product not found.</p>";
-      return;
-    }
-
-    const html = `
-      <div class="product-info" id="product-${product.id}">
-        <img src="${product.img}" alt="${product.id}" />
-        <h2>${product.title}</h2>
-        <p>${product.description}</p>
-        <p><strong>${product.price}</strong></p>
-        <p><span style="color:green;">${product.discountText}</span></p>
-        <button class="btn">Add to Cart</button>
-      </div>
-    `;
-    document.getElementById('product-container').innerHTML = html;
-  }
-
-  // Main execution
-  window.addEventListener('DOMContentLoaded', () => {
-  const productId = getQueryParam('id');
-  
-  if (!productId) {
-    document.getElementById('product-container').innerHTML = "<p>No product selected.</p>";
-    return;
-  }
-
-  const product = products.find(p => p.id === productId);
-  displayProduct(product);
-});
-  // Function to display product details
-function displayProduct(product) {
+ function displayProduct(product) {
   if (!product) {
     document.getElementById('product-container').innerHTML = "<p>Product not found.</p>";
     return;
@@ -220,11 +187,39 @@ function displayProduct(product) {
       <p>${product.description}</p>
       <p><strong>${product.price}</strong></p>
       <p><span style="color:green;">${product.discountText}</span></p>
-      <button class="btn">Add to Cart</button>
+      <button class="btn" id="add-to-cart-btn">Add to Cart</button>
     </div>
   `;
   document.getElementById('product-container').innerHTML = html;
+
+  // ADD THIS: Handle "Add to Cart" click
+  document.getElementById('add-to-cart-btn').addEventListener('click', () => {
+    const cart = JSON.parse(localStorage.getItem('cart')) || [];
+
+    // Check if item already in cart
+    const existing = cart.find(item => item.id === product.id);
+    if (existing) {
+      existing.quantity += 1;
+    } else {
+      cart.push({ ...product, quantity: 1 });
+    }
+
+    localStorage.setItem('cart', JSON.stringify(cart));
+    alert(`${product.title} added to cart!`);
+  });
 }
+  // Main execution
+  window.addEventListener('DOMContentLoaded', () => {
+  const productId = getQueryParam('id');
+  
+  if (!productId) {
+    document.getElementById('product-container').innerHTML = "<p>No product selected.</p>";
+    return;
+  }
+
+  const product = products.find(p => p.id === productId);
+  displayProduct(product);
+});
 </script>
 </body>
 </html>
