--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
       <i class="fas fa-cube"></i>
       <span class="nav-label">Products</span>
     </a>
-    <a class="active" href="deals.html">
+    <a href="deals.html">
       <i class="fas fa-tag"></i>
       <span class="nav-label">Deals</span>
     </a>
@@ -46,7 +46,7 @@
       <i class="fas fa-pen"></i>
       <span class="nav-label">Feedback Form</span>
     </a>
-    <a href="cart.html">
+    <a class="active" href="cart.html">
       <i class="fas fa-shopping-cart"></i>
       <span class="nav-label">Cart </span>
     </a>
