--- a/cart.html
+++ b/cart.html
@@ -24,7 +24,7 @@
       <i class="fas fa-store"></i>
       <span class="nav-label">Shop</span>
     </a>
-    <div class="nav-sub-links">
+    <div class="nav-sub-links" id="shop-sub-links" style="display: none;>
     <a href="products.html">
       <i class="fas fa-cube"></i>
       <span class="nav-label">Products</span>
